--- a/src/components/BlogPart/BlogAuthor.module.css
+++ b/src/components/BlogPart/BlogAuthor.module.css
@@ -41,11 +41,11 @@
 .title > div:nth-child(1) > button{
     border-radius: 1.5rem;
     width: 65px;
-    color: white;
     background-color: black;
     border: 0;
     margin-left: 0.5rem;
     font-weight: 150;
+    color: white;
 } 
 
 .title > div:nth-child(2){
@@ -56,4 +56,8 @@
     flex: 5;
     display: flex;
 
+}
+
+.title button{
+    cursor: pointer;
 }
